--- a/exercises/all-html/2/index.html
+++ b/exercises/all-html/2/index.html
@@ -2,12 +2,46 @@
 <html>
 <body>
 
-<h1>The bdo element</h1>
+<h1>Palindrome Words</h1>
 
-<p>This paragraph will go left-to-right.</p>
-<p><bdo dir="rtl">This paragraph will go right-to-left.</bdo></p>
+<p>Words on this list will go left-to-right.</p>
+
+<br>
+
+<ul>
+  <li>noon</li>
+  <li>mom</li>
+  <li>level</li>
+  <li>kayak</li>
+  <li>civic</li>
+  <li>radar</li>
+  <li>madam</li>
+  <li>refer</li>
+</ul>
+
+
+<p><bdo dir="rtl">Words on this list will go right-to-left.
+  <ul>
+    <li>noon</li>
+    <li>mom</li>
+    <li>level</li>
+    <li>kayak</li>
+    <li>civic</li>
+    <li>radar</li>
+    <li>madam</li>
+    <li>refer</li>
+  </ul>
+</bdo></p>
+
+
+<hr><hr><hr>
+
+
+<h1>The mark element</h1>
+
+<p>Do not forget to buy <mark>milk</mark> today.</p>
+
+<mark>goodgood</mark>
 
 </body>
 </html>
-
-<hr><hr><hr><hr>
