--- a/exercises/indexx.html
+++ b/exercises/indexx.html
@@ -63,3 +63,22 @@ Text input <input type="text" value="default value that goes on and on without s
   <br>
 
 This is an image <img src="assets/imgs/waterr.jpg" alt="this is water">
+
+
+
+    <p>
+        silence silence silence<br>
+        silence silence silence<br>
+        silence
+        &nbsp;
+        &nbsp;
+        &nbsp;
+        &nbsp;
+        &nbsp;
+        &nbsp;
+        silence<br>
+        silence silence silence<br>
+        silence silence silence<br>
+    </p>
+</body>
+</html>
