--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
 </head>
 <body>
 
-<h1>Exercises</h1>
+<h1>Exercise 1</h1>
 
-  <a href="exercises/al-html/1/index.html"> <h3>1</h3></a>
-  <a href="file:///Users/chaavisa/Desktop/chachaaungkavanich-cif22/chaavisa.github.io/exercises/all-html/2/index.html"> <h3>2</h3></a>
-  <a href="file:///Users/chaavisa/Desktop/chachaaungkavanich-cif22/chaavisa.github.io/exercises/all-html/3/index.html"> <h3>3</h3></a>
-  <a href="file:///Users/chaavisa/Desktop/chachaaungkavanich-cif22/chaavisa.github.io/exercises/all-html/4/index.html"> <h3>4</h3></a>
-  <a href="file:///Users/chaavisa/Desktop/chachaaungkavanich-cif22/chaavisa.github.io/exercises/all-html/5/index.html"> <h3>5</h3></a>
+  <a href="exercises/all-html/1/index.html"> <h3>1</h3></a>
+  <a href="exercises/all-html/2/index.html"> <h3>2</h3></a>
+  <a href="exercises/all-html/3/index.html"> <h3>3</h3></a>
+  <a href="exercises/all-html/4/index.html"> <h3>4</h3></a>
+  <a href="exercises/all-html/5/index.html"> <h3>5</h3></a>
+
+<h1>Exercise 2</h1>
+
+  <a href="exercises/hoverstates/index.html"> <h3>Hover</h3></a>
+
 
 <h1>Project</h1>
 
