--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <h1>Exercise 2</h1>
 
-  <a href="exercises/hoverstates/index.html"> <h3>Hover</h3></a>
+  <a href="exercises/hoverstates/index.html"> <h3>Hovering</h3></a>
 
 
 <h1>Project</h1>
