--- a/harmonic-collection/index.html
+++ b/harmonic-collection/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="assets/main.css">
+  <link rel="stylesheet" href="../assets/harmonic.css">
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,6 +13,7 @@
 <h1>Entries</h1>
 
   <a href=""> <h3>Entry 1</h3></a>
+  <a href=""> <h3>Entry 2</h3></a>
 
 
 </body>
