--- a/exercises/indexx.html
+++ b/exercises/indexx.html
@@ -62,7 +62,7 @@ Text input <input type="text" value="default value that goes on and on without s
 
   <br>
 
-This is an image <img src="assets/imgs/waterr.jpg" alt="this is water">
+This is an image <img src="../assets/imgs/waterr.jpg" alt="this is water">
 
 
 
