--- a/harmonic-collection/entries/entry-2/index.html
+++ b/harmonic-collection/entries/entry-2/index.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="entry2.css">
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Entry-2</title>
-
-  <h1>Hovering</h1>
-
 </head>
 <body>
+
+  <!-- The video -->
+<video autoplay muted loop id="Video">
+  <source src="imgs/rainvid.mp4" type="video/mp4">
+</video>
+
+<!-- Optional: some overlay text to describe the video -->
+<div class="content">
+  <h1>rain</h1>
+</div>
+
+
+<marquee style="z-index:1;
+position: relative;
+left:2000px;
+top:0px;
+font-family: sans-serif;
+font-size:50pt;
+weight: 40pt;
+color:#ffffff;
+height:1000px;" scrollamount="9" direction="down">how do you feel?</marquee>
+
+
+
+
+
+    </body>
+  </html>
