--- a/harmonic-collection/index.html
+++ b/harmonic-collection/index.html
@@ -12,8 +12,8 @@
 
 <h1>Entries</h1>
 
-  <a href="../harmonic-collection/entries/entry-1/index.html"> <h3>Entry 1</h3></a>
-  <a href="../harmonic-collection/entries/entry-2/index.html"> <h3>Entry 2</h3></a>
+  <a href="../harmonic-collection/entries/entry-1/index.html"> <h3>Entry 1 - Concrete Poetry</h3></a>
+  <a href="../harmonic-collection/entries/entry-2/index.html"> <h3>Entry 2 - Hover</h3></a>
 
 
 </body>
