--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 
   <a href="exercises/hoverstates/index.html"> <h3>Hovering</h3></a>
 
+<h1>Exercise 3</h1>
+
+  <a href="exercises/stilllife/index.html"> <h3>Still Life</h3></a>
+
 
 <h1>Project</h1>
 
