--- a/harmonic-collection/index.html
+++ b/harmonic-collection/index.html
@@ -15,6 +15,7 @@
   <a href="../harmonic-collection/entries/entry-1/index.html"> <h3>Entry 1 - Concrete Poetry</h3></a>
   <a href="../harmonic-collection/entries/entry-2/index.html"> <h3>Entry 2 - Hover</h3></a>
   <a href="../harmonic-collection/entries/entry-3/index.html"> <h3>Entry 3 - The Shapes of CSS</h3></a>
+  <a href="../harmonic-collection/entries/entry-4/index.html"> <h3>Entry 4 - Responsive Page</h3></a>
 
 
 </body>
