--- a/harmonic-collection/index.html
+++ b/harmonic-collection/index.html
@@ -6,16 +6,21 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Chacha</title>
+  <title>entries</title>
 </head>
 <body>
 
-<h1>Entries</h1>
 
-  <a href="../harmonic-collection/entries/entry-1/index.html"> <h3>Entry 1 - Concrete Poetry</h3></a>
-  <a href="../harmonic-collection/entries/entry-2/index.html"> <h3>Entry 2 - Hover</h3></a>
-  <a href="../harmonic-collection/entries/entry-3/index.html"> <h3>Entry 3 - The Shapes of CSS</h3></a>
-  <a href="../harmonic-collection/entries/entry-4/index.html"> <h3>Entry 4 - Responsive Page</h3></a>
+<div class="cha"><a class="chaa" href="../index.html">chacha aungkavanich</a></div>
+
+ <div class="en">entries</div>
+
+
+  <div class="concrete"><a href="../harmonic-collection/entries/entry-1/index.html"><span class="con">concrete poetry</span></a></div>
+  <div class="hover"><a href="../harmonic-collection/entries/entry-2/index.html"><span class="hov">hover</span></a></div>
+  <div class="shapes"><a href="../harmonic-collection/entries/entry-3/index.html"><span class="shape">the shapes of css</span></a></div>
+  <div class="response"><a href="../harmonic-collection/entries/entry-4/index.html"><span class="res">responsive page</span></a></div>
+  <div class="flex"><a href="../harmonic-collection/entries/entry-4/index.html"><span class="fle">flexbox</span></a></div>
 
 
 </body>
