--- a/index.html
+++ b/index.html
@@ -6,33 +6,24 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Chacha</title>
+  <title>chacha</title>
 </head>
 <body>
 
-  <h2>Chacha Aungkavanich</h2>
+  <div class="cha"><a class="chaa" href="index.html">chacha aungkavanich</a></div>
 
-<h1>Exercise 1</h1>
+<div class="ex">exercises</div>
 
-  <a href="exercises/all-html/1/index.html"> <h3>1</h3></a>
-  <a href="exercises/all-html/2/index.html"> <h3>2</h3></a>
-  <a href="exercises/all-html/3/index.html"> <h3>3</h3></a>
-  <a href="exercises/all-html/4/index.html"> <h3>4</h3></a>
-  <a href="exercises/all-html/5/index.html"> <h3>5</h3></a>
+<div class="all"><a href="all-html/all-html.html">all-html</a></div>
 
-<h1>Exercise 2</h1>
+<div class="hover"><a href="exercises/hoverstates/index.html">hoverstates</a></div>
 
-  <a href="exercises/hoverstates/index.html"> <h3>Hovering</h3></a>
-
-<h1>Exercise 3</h1>
-
-  <a href="exercises/stilllife/index.html"> <h3>Still Life</h3></a>
+<div class="still"><a href="exercises/stilllife/index.html">still life</a></div>
 
 
-<h1>Project</h1>
+  <div class="pro">project</div>
 
-  <a href="harmonic-collection/index.html"><h3>Harmonic Collection</h3>
-  </a>
+  <div class="har"><a href="harmonic-collection/index.html">harmonic collection</a></div>
 
 </body>
 </html>
