--- a/harmonic-collection/index.html
+++ b/harmonic-collection/index.html
@@ -20,7 +20,7 @@
   <div class="hover"><a href="../harmonic-collection/entries/entry-2/index.html"><span class="hov">hover</span></a></div>
   <div class="shapes"><a href="../harmonic-collection/entries/entry-3/index.html"><span class="shape">the shapes of css</span></a></div>
   <div class="response"><a href="../harmonic-collection/entries/entry-4/index.html"><span class="res">responsive page</span></a></div>
-  <div class="flex"><a href="../harmonic-collection/entries/entry-4/index.html"><span class="fle">flexbox</span></a></div>
+  <div class="flex"><a href="../flexbox/flexbox.html"><span class="fle">flexbox</span></a></div>
 
 
 </body>
