--- a/demo.html
+++ b/demo.html
@@ -18,3 +18,198 @@
   </div>
 </body>
 </html>
+
+/*
+
+
+<div class="month">
+
+<div class="week">
+  <div class="day">
+    1
+    <br>
+    <br>
+      <div class="holiday">
+        Soleiform:
+        <div class="holiday-1">
+          slipper shaped
+        </div>
+      </div>
+  </div>
+  <div class="day">2</div>
+</div>
+
+<div class="week">
+  <div class="day">
+    3
+    <br>
+    <br>
+      <div class="holiday">
+        Suburbicarian:
+        <div class="holiday-2">
+        of, like or pertaining to suburbs
+        </div>
+    </div>
+  </div>
+  <div class="day">4</div>
+  <div class="day">
+    5
+    <br>
+    <br>
+      <div class="holiday">
+        Sapphism:
+        <div class="holiday-3">
+          homosexuality in women
+        </div>
+      </div>
+  </div>
+  <div class="day">
+    6
+    <br>
+    <br>
+      <div class="holiday">
+        Satanophany:
+        <div class="holiday-4">
+          an appearance of the devil
+        </div>
+      </div>
+  </div>
+  <div class="day">7</div>
+  <div class="day">8</div>
+  <div class="day">
+    9
+    <br>
+    <br>
+      <div class="holiday">
+        Saxigenous:
+        <div class="holiday-5">
+          growing in rocks
+        </div>
+      </div>
+  </div>
+</div>
+
+<div class="week">
+  <div class="day">10</div>
+  <div class="day">
+    11
+    <br>
+      <div class="holiday">
+        Sottisier:
+        <div class="holiday-6">
+          collection of jokes, quotes, or ridiculous remarks
+        </div>
+      </div>
+  </div>
+  <div class="day">12</div>
+  <div class="day">13</div>
+  <div class="day">
+    14
+    <br>
+    <br>
+      <div class="holiday">
+        Scanderoon:
+        <div class="holiday-7">
+          homing pigeon
+        </div>
+      </div>
+  </div>
+  <div class="day">15</div>
+  <div class="day">16</div>
+</div>
+
+<div class="week">
+  <div class="day">17</div>
+  <div class="day">
+    18
+    <br>
+    <br>
+      <div class="holiday">
+        Schematonics:
+        <div class="holiday-8">
+          art of using gesture to express tones
+        </div>
+      </div>
+  </div>
+  <div class="day">19</div>
+  <div class="day">
+    20
+    <br>
+    <br>
+      <div class="holiday">
+        Scintillescent:
+        <div class="holiday-9">
+          twinkling
+        </div>
+      </div>
+  </div>
+  <div class="day">21</div>
+  <div class="day">22</div>
+  <div class="day">
+    23
+    <br>
+    <br>
+      <div class="holiday">
+        Selenomancy:
+        <div class="holiday-10">
+          divination by studying the moon
+        </div>
+      </div>
+  </div>
+</div>
+
+<div class="week">
+  <div class="day">
+    24
+    <br>
+    <br>
+      <div class="holiday">
+        Senocular:
+        <div class="holiday-11">
+          having six eyes
+        </div>
+      </div>
+  </div>
+  <div class="day">25</div>
+  <div class="day">
+    26
+    <br>
+    <br>
+      <div class="holiday">
+        Sippet:
+        <div class="holiday-12">
+          morsel of bread to be eaten with soup
+        </div>
+      </div>
+  </div>
+  <div class="day">27</div>
+  <div class="day">
+    28
+    <br>
+    <br>
+      <div class="holiday">
+        Siderreal:
+        <div class="holiday-13">
+          of, like or pertaining to the stars
+        </div>
+      </div>
+  </div>
+  <div class="day">
+    29
+    <br>
+    <br>
+      <div class="holiday">
+        Smalt:
+        <div class="holiday-14">
+          deep blue
+        </div>
+      </div>
+  </div>
+  <div class="day">30</div>
+
+</div>
+</div>
+
+
+</div>
+*/
