--- a/harmonic-collection/index.html
+++ b/harmonic-collection/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="../assets/harmonic.css">
-
+<link rel="icon" href="../assets/circle2.png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
