--- a/flexbox/flexbox.html
+++ b/flexbox/flexbox.html
@@ -46,8 +46,11 @@ document.addEventListener('mousemove' , e => {
     <div class="day">7</div>
     <div class="day">8</div>
     <div class="day">9</div>
-    <div class="day">10
-        <div class="nop"> <img src="imgs/nop.jpg" alt="nop" style="width:70px"></div>
+    <div class="dayy">10
+      <div class="holiday">
+        nop's birthday!
+          </div>
+        <div class="nop"> <img src="imgs/nop.jpg" alt="nop"></div>
     </div>
   </div>
 
@@ -72,32 +75,30 @@ document.addEventListener('mousemove' , e => {
       <div class="holiday">
         christmas eve
           </div>
-          <div class="milk"> <img src="imgs/milkk.png" alt="milk" style="width:40px"></div>
+          <div class="milk"> <img src="imgs/milkk.png" alt="milk"></div>
     </div>
   </div>
 
   <div class="week">
     <div class="dayy">25
       <div class="holiday">
-        christmas
+        christmas day
           </div>
-            <div class="ct"> <img src="imgs/christmastree.png" alt="ct" style="width:40px"></div>
+            <div class="ct"> <img src="imgs/christmastree.png" alt="ct"></div>
     </div>
     <div class="day">26</div>
     <div class="day">27</div>
     <div class="day">28</div>
     <div class="day">29</div>
     <div class="dayy">30
-      <div class="holiday">
-        new year's eve
-          </div>
-          <div class="pre"> <img src="imgs/present.png" alt="pre" style="width:40px"></div>
+
+          <div class="pre"> <img src="imgs/present.png" alt="pre"></div>
     </div>
     <div class="dayy">31
       <div class="holiday">
-        new year's
+        new year's eve
           </div>
-          <div class="fireworks"> <img src="imgs/fireworks.png" alt="fireworks" style="width:40px"></div>
+          <div class="fireworks"> <img src="imgs/fireworks.png" alt="fireworks"></div>
     </div>
   </div>
 
