--- a/harmonic-collection/index.html
+++ b/harmonic-collection/index.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet" href="../assets/harmonic.css">
 <link rel="icon" href="../assets/circle2.png">
+<meta http-equiv"X-UA-Compatible" content="ie=edge">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
