--- a/index.html
+++ b/index.html
@@ -35,9 +35,80 @@
 
   <div class="pro">project</div>
 
-
-
   <div class="har"><a href="harmonic-collection/index.html">harmonic collection</a></div>
+
+<div class="core">
+  core 1:
+  <br>
+  interaction
+</div>
+
+  <div class="container">
+
+         <div class="card">
+
+             <div class="slide slide1">
+
+                 <div class="content">
+
+                     <div class="icon">
+
+                         <i class="fa fa-user-circle" aria-hidden="true"></i>
+
+                     </div>
+
+                 </div>
+
+             </div>
+
+             <div class="slide slide2">
+
+                 <div class="content">
+
+                       <a href="https://www.instagram.com/chaavisa/"><h1>@chaavisa</h1></a>
+
+                 </div>
+
+            </div>
+
+        </div>
+
+  </div>
+
+
+  <div class="container2">
+
+         <div class="card">
+
+             <div class="slide slide1">
+
+                 <div class="content">
+
+                     <div class="icon">
+
+                         <i class="fa fa-user-circle" aria-hidden="true"></i>
+
+                     </div>
+
+                 </div>
+
+             </div>
+
+             <div class="slide slide2">
+
+                 <div class="content">
+
+                       <a href="mailto:chacha.akvn@gmail.com"><h1>chacha.akvn@gmail.com</h1></a>
+
+                 </div>
+
+            </div>
+
+        </div>
+
+  </div>
+
+
 
 </body>
 </html>
