--- a/harmonic-collection/index.html
+++ b/harmonic-collection/index.html
@@ -22,6 +22,7 @@
   <div class="shapes"><a href="../harmonic-collection/entries/entry-3/index.html"><span class="shape">the shapes of css</span></a></div>
   <div class="response"><a href="../harmonic-collection/entries/entry-4/index.html"><span class="res">responsive page</span></a></div>
   <div class="flex"><a href="../flexbox/flexbox.html"><span class="fle">flexbox</span></a></div>
+  <div class="motion"><a href="../motion/motion.html"><span class="mo">motion</span></a></div>
 
 
 </body>
