--- a/motion/motion.html
+++ b/motion/motion.html
@@ -14,6 +14,8 @@
 <div class="moonsun"></div>
 <div class="ray"></div>
 
+<div class="sf">spring flowers</div>
+
 <div class="flowers">
 <div class="f1"> <img src="imgs/flower1.png" alt="f1"></div>
 <div class="f2"> <img src="imgs/flower2.png" alt="f2"></div>
