--- a/harmonic-collection/index.html
+++ b/harmonic-collection/index.html
@@ -22,7 +22,10 @@
   <div class="shapes"><a href="../harmonic-collection/entries/entry-3/index.html"><span class="shape">the shapes of css</span></a></div>
   <div class="response"><a href="../harmonic-collection/entries/entry-4/index.html"><span class="res">responsive page</span></a></div>
   <div class="flex"><a href="../flexbox/flexbox.html"><span class="fle">flexbox</span></a></div>
-  <div class="motion"><a href="../motion/motion.html"><span class="mo">motion</span></a></div>
+  <div class="motion"><a href="../motion/motion.html" target="_blank"><span class="mo">motion</span></a></div>
+  <div class="iframe"><a href="../iframep/iframep.html" target="_blank"><span class="i">iframe</span></a></div>
+
+
 
 
 </body>
