--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
 <div class="still"><a href="exercises/stilllife/index.html">still life</a></div>
 
+<div class="iframe"><a href="exercises/iframe/iframe.html">iframe</a></div>
+
 
   <div class="pro">project</div>
 
