--- a/iframep/kayak.html
+++ b/iframep/kayak.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <div class="surf">let's surf!</div>
+  <div class="surf">sea kayaking</div>
 
 
 <iframe width="1400" height="815" src="https://www.youtube.com/embed/HvapPjqBkQo?start=72" title="kayak" frameborder="0" allowfullscreen></iframe>
